[package]
name = "collatz-at-home"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
bytemuck = "1.24.0"
pollster = "0.4.0"
wgpu = "27.0"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3", features = ["console"] }
wasm-bindgen-futures = "0.4.50"
console_error_panic_hook = "0.1.7"
flume = "0.11"
